# evm-cloud

./: .gitignore  Makefile  README.md  dist-workspace.toml  main.tf  outputs.tf  variables.tf
.github/workflows/: builder.yml  cli-release.yml  cli-tests.yml  terraform-qa.yml  test-deploy.yml
app/: index.html  package.json  tsconfig.node.json  vite.config.ts
app/src/: App.tsx  index.css  main.tsx
app/tests/: fixtures.ts  golden.test.ts  update-golden.ts
cli/: Cargo.toml  build.rs
cli/src/: deployer.rs  easy_mode.rs  env.rs  error.rs  examples.rs  handoff.rs  init_answers.rs  init_scaffold.rs  init_templates.rs  init_wizard.rs  kubeconfig.rs  main.rs  output.rs  post_deploy.rs  preflight.rs  ssh.rs  terraform.rs  tfvars_parser.rs  version_guard.rs
cli/src/codegen/: manifest.rs  mod.rs  scaffold.rs  tfvars.rs
cli/src/commands/: apply.rs  bootstrap.rs  deploy.rs  destroy.rs  env.rs  infra.rs  init.rs  kubectl.rs  logs.rs  mod.rs  status.rs  templates.rs  tfvars.rs
cli/src/commands/deploy/: helpers.rs  mod.rs
cli/src/config/: loader.rs  mod.rs  schema.rs  validation.rs
cli/src/deployer/: lock.rs  mod.rs  output.rs  scripts.rs
cli/src/init_templates/: config.rs  deploy.rs  indexer.rs  mod.rs  terraform.rs
cli/src/local/: cluster.rs  config.rs  deploy.rs  health.rs  manifests.rs  mod.rs  prerequisites.rs  profiles.rs
cli/src/templates/: chains.rs  mod.rs  registry.rs  render.rs  resolve.rs  types.rs  validate.rs
cli/tests/: e2e.rs
deployers/: README.md
deployers/compose/: README.md  deploy.sh
documentation/: package.json  vocs.config.tsx
local/: .gitignore  README.md  down.sh  kind-config-persist.yaml  kind-config.yaml  reset.sh  status.sh  up.sh
runbooks/: aws-production-apply.md  external-deployers.md
scripts/: generate-homebrew-formula.sh  install.sh
templates/: registry.toml
(+443 files in other folders)
