[package]
name = "evm-cloud"
version = "0.1.0"
edition = "2021"

[build-dependencies]
sha2 = "0.10"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
toml = "0.8"
which = "8"
