[package]
name = "evm-cloud"
version = "0.0.1-alpha8"
edition = "2021"
description = "CLI for provisioning and operating EVM blockchain data infrastructure"
homepage = "https://evm-cloud.xyz"
repository = "https://github.com/ExoMonk/evm-cloud"

[build-dependencies]
sha2 = "0.10"

[dependencies]
base64 = "0.22"
clap = { version = "4", features = ["derive", "env"] }
dialoguer = "0.11"
libc = "0.2"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
toml = "0.8"
which = "8"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serde_yaml = "0.9"
tempfile = "3"

[profile.dist]
inherits = "release"
